--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -3,28 +3,6 @@ title: "ROS Learning Path"
 description: "Set of notes for reviewing ROS concepts"
 ---
 
-export const components = {
-    blockquote: Blockquote,
-    a: A,
-    pre: Pre,
-    pre: InlineCode,
-    code: _CodeBlock,
-    em: Em,
-    h1: H1,
-    h2: H2,
-    h3: H3,
-    h4: H4,
-    h5: H5,
-    h6: H6,
-    hr: Hr,
-    img: Img,
-    ul: Ul,
-    ol: Ol,
-    li: Li,
-    strong: Strong,
-    p: P
-}
-
 ## Prerequisites for Diving
 
 Knowledge required: 
@@ -60,11 +38,18 @@ Content Outline:
 
 Intermediate - Tooling
 - Introduction to RVIZ
-- Robot model definition - URDF and XACRO
+- [Robot model definition - URDF and XACRO](ros2-urdf)
 - Transformations with TF2
 - Introduction to Gazebo
 - Building sim environment in Gazebo
 - Gazebo plugins ecosystem
+
+## Module 3 - Advanced
+
+- Advanced subjects on nodes
+
+## ROS 2 Control
+
 - Introduction to ROS 2 Control
 - Lifecycle of controllers and hardware (ROS 2 Control)
 - Hardware interface (ROS 2 Control)
