--- a/src/content/docs/en/showcase.mdx
+++ b/src/content/docs/en/showcase.mdx
@@ -13,6 +13,14 @@ import MeasurementError from '../../../components/AutoMobile/MeasurementError.as
 
 Support for [CommonMark](https://commonmark.org/) and [GFM (GitHub Flavored Markdown)](https://github.github.com/gfm/).
 
+## Code Blocks
+
+Standard markdown code block use triple ` ``` `, you can pass arguments:
+
+- `lang`: code language for highlight
+- `filename`: show file name on header of the code block.
+- `remoteURL`: remote source to fetch the content of the code block.
+
 ## Custom Components
 
 I can create custom component and import them along the markdown note:
