--- a/src/content/docs/en/showcase.mdx
+++ b/src/content/docs/en/showcase.mdx
@@ -13,6 +13,10 @@ import MeasurementError from '../../../components/AutoMobile/MeasurementError.as
 
 Support for [CommonMark](https://commonmark.org/) and [GFM (GitHub Flavored Markdown)](https://github.github.com/gfm/).
 
+## Markdown Extension
+
+- [`remark-capitalize-headings`](https://github.com/Xunnamius/unified-utils/tree/main/packages/remark-capitalize-headings): Header are automaticaly adjusted to adheres to [The Chicago Manual of Style](https://en.wikipedia.org/wiki/The_Chicago_Manual_of_Style).
+
 ## Code Blocks
 
 Standard markdown code block use triple ` ``` `, you can pass arguments:
