--- a/src/content/docs/en/python-vars.mdx
+++ b/src/content/docs/en/python-vars.mdx
@@ -3,7 +3,7 @@ title: Python Variables
 description: Internal mechanisim of python variables
 ---
 
-This note is inspired (almost a copy) on the video [How variables works in Python | Explained with Animations](https://www.youtube.com/watch?v=Bz3ir-vKqkk), but I just wanted to add links and more references.
+This note is inspired (almost a copy) on the video [How variables works in Python | Explained with Animations](https://www.youtube.com/watch?v=Bz3ir-vKqkk) by Sreekanth, but I just wanted to add links and more references.
 
 ## Variables
 
