--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -31,7 +31,7 @@ Content Outline:
 - TBA [Services](ros2-services)
 - TBA [Actions](ros2-actions)
 - TBA [Parameters server](ros2-parameters)
-- TBA [Launch System](ros2-launch)
+- [Launch System](ros2-launch)
 
 
 ## Module 2 - Intermediate
