add ethercat note

--- a/src/content/docs/en/ethercat.mdx
+++ b/src/content/docs/en/ethercat.mdx
@@ -3,8 +3,27 @@ title: EtherCAT
 description: Some resources for EtherCAT
 ---
 
+## Slave Internals
+
+<Drawio
+    file="ethercat.drawio"
+    page="1"
+    description="Internal components in a EtherCAT slave."
+/>
+
+## The Frame Structure
+
+- [EtherType - Wikipedia List](https://en.wikipedia.org/wiki/EtherType#Values)
+
+<Drawio
+    file="ethercat.drawio"
+    page="2"
+    description="EtherCAT frame structure."
+/>
+
 ## External Resources
 
+- [Slave Implementation Guide](https://www.ethercat.org/download/documents/ETG2200_V3i1i0_G_R_SlaveImplementationGuide.pdf)
 - [acontis EC-Master vs Open Source (IgH EtherCAT-Master® (EtherLab®) and Simple Open EtherCAT Master (SOEM))](https://www.acontis.com/en/ethercat-master-options-ec-master-vs-open-source-etherlab-SOEM.html)
 - [A Performance Evaluation of Open Source-based EtherCAT Master Systems](https://avestia.com/CDSR2017_Proceedings/files/paper/CDSR_128.pdf)
 - [IgH EtherCAT Master for Linux](https://gitlab.com/etherlab.org/ethercat)
