--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -33,3 +33,18 @@
   volume = {XLVIII-1/W3-2023},
   DOI = {10.5194/isprs-archives-XLVIII-1-W3-2023-137-2023},
 }
+@preprint{alhashimHighQualityMonocular2019,
+  language = {en},
+  accessDate = {2024-10-02 04:07:58},
+  title = {High Quality Monocular Depth Estimation via Transfer Learning},
+  extra = {arXiv:1812.11941 [cs]},
+  archiveID = {arXiv:1812.11941},
+  year = {2019},
+  date = {2019-03-10 2019-03-10},
+  url = {http://arxiv.org/abs/1812.11941},
+  author = {Alhashim, Ibraheem and Wonka, Peter},
+  abstractNote = {Accurate depth estimation from images is a fundamental task in many applications including scene understanding and reconstruction. Existing solutions for depth estimation often produce blurry approximations of low resolution. This paper presents a convolutional neural network for computing a high-resolution depth map given a single RGB image with the help of transfer learning. Following a standard encoder-decoder architecture, we leverage features extracted using high performing pre-trained networks when initializing our encoder along with augmentation and training strategies that lead to more accurate results. We show how, even for a very simple decoder, our method is able to achieve detailed high-resolution depth maps. Our network, with fewer parameters and training iterations, outperforms state-of-the-art on two datasets and also produces qualitatively better results that capture object boundaries more faithfully. Code and corresponding pre-trained weights are made publicly available1.},
+  libraryCatalog = {arXiv.org},
+  repository = {arXiv},
+  key = {32BVAV9H},
+}
