add more information in control

--- a/src/content/docs/en/control-001.mdx
+++ b/src/content/docs/en/control-001.mdx
@@ -31,7 +31,7 @@ Other definition,
 
 <Drawio
     file="control-001.drawio"
-    page="1"
+    page="0"
     description="Minimal form of a system."
 />
 
@@ -53,7 +53,7 @@ Ogata refers to "process" as any operation to be controlled.
 
 <Drawio
     file="control-001.drawio"
-    page="2"
+    page="1"
     description="Representation of a process."
 />
 
@@ -97,7 +97,7 @@ Sensor: quantifying physical properties
 
 <Drawio
     file="control-001.drawio"
-    page="3"
+    page="2"
     description="Open-Loop system representation."
 />
 
@@ -105,7 +105,7 @@ Sensor: quantifying physical properties
 
 <Drawio
     file="control-001.drawio"
-    page="4"
+    page="3"
     description="Closed-Loop system representation."
 />
 
@@ -115,7 +115,7 @@ Sensor: quantifying physical properties
 
 <Drawio
     file="control-001.drawio"
-    page="5"
+    page="4"
     description="Automobile steering control system (minimal representation)"
 />
 
@@ -123,7 +123,7 @@ Sensor: quantifying physical properties
 
 <Drawio
     file="control-001.drawio"
-    page="6"
+    page="5"
     description="A manual valve control system (minimal representation)."
 />
 
@@ -131,7 +131,7 @@ Sensor: quantifying physical properties
 
 <Drawio
     file="control-001.drawio"
-    page="7"
+    page="6"
     description="Antenna azimuth position control system (minimal representation)."
 />
 
@@ -139,7 +139,7 @@ Sensor: quantifying physical properties
 
 <Drawio
     file="control-001.drawio"
-    page="8"
+    page="7"
     description="The control system design process."
 />
 
@@ -149,13 +149,42 @@ Sensor: quantifying physical properties
 
 ### Identify the Variables to be Controlled
 
+- Space station orientation and control moment gyro momentum.
+- Mean arterial pressure.
+- UAV vertical position
+
 ### Create a Schematic
+
+<Drawio
+    file="control-001.drawio"
+    page="8"
+    description="Schematic diagrams for different disciplines. Each diagram is used to illustrate the dynamics of a feedback system."
+/>
 
 ### Develop a (Mathematical) Model
 
+- Block Diagrams
+- Modelling from Experiments
+
+<Drawio
+    file="control-001.drawio"
+    page="9"
+    description="Standard block diagram elements. The arrows indicate the the inputs and outputs of each element, with the mathematical operation corresponding to the blocked labeled at the output."
+/>
+
 ### Reduce the Model
 
+By mathematical modelling you can reduce blocks.
+
 ### Analyze and Design
+
+In this phase, the engineer analyzes the system to see if the response specifications and performance requirements can be met by simple adjustments of system parameters.
+
+Types of responses:
+- impulse
+- step
+- ramp
+- sinusoidal
 
 ## Computer-Aided Design Tools
 
