remove citation pluging for now

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -48,3 +48,26 @@
   repository = {arXiv},
   key = {32BVAV9H},
 }
+@conferencePaper{BlochLaurent2015,
+  title = {Informatics in the light of some Leibniz’s works},
+  year = {2016},
+  date = {2016-05-00 2016-05},
+  author = {Bloch, Laurent},
+  key = {3YCK8RDT},
+  extra = {Citation Key: BlochLaurent2015},
+}
+@preprint{tzesGraphNeuralNetworks2022,
+  title = {Graph Neural Networks for Multi-Robot Active Information Acquisition},
+  abstractNote = {This paper addresses the Multi-Robot Active Information Acquisition (AIA) problem, where a team of mobile robots, communicating through an underlying graph, estimates a hidden state expressing a phenomenon of interest. Applications like target tracking, coverage and SLAM can be expressed in this framework. Existing approaches, though, are either not scalable, unable to handle dynamic phenomena or not robust to changes in the communication graph. To counter these shortcomings, we propose an Information-aware Graph Block Network (I-GBNet), an AIA adaptation of Graph Neural Networks, that aggregates information over the graph representation and provides sequential-decision making in a distributed manner. The I-GBNet, trained via imitation learning with a centralized sampling-based expert solver, exhibits permutation equivariance and time invariance, while harnessing the superior scalability, robustness and generalizability to previously unseen environments and robot conﬁgurations. Experiments on signiﬁcantly larger graphs and dimensionality of the hidden state and more complex environments than those seen in training validate the properties of the proposed architecture and its efﬁcacy in the application of localization and tracking of dynamic targets.},
+  archiveID = {arXiv:2209.12091},
+  key = {UETYTIWH},
+  extra = {arXiv:2209.12091 [cs]},
+  year = {2022},
+  url = {http://arxiv.org/abs/2209.12091},
+  repository = {arXiv},
+  language = {en},
+  accessDate = {2023-08-15 11:31:30},
+  author = {Tzes, Mariliza and Bousias, Nikolaos and Chatzipantazis, Evangelos and Pappas, George J.},
+  libraryCatalog = {arXiv.org},
+  date = {2022-09-24 2022-09-24},
+}
