--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -5,19 +5,16 @@ description: "Set of notes for reviewing ROS concepts"
 
 ## Prerequisites for Diving
 
-Knowledge required: 
-- [Linux Command Line and Shell Scripting Bible, 4th Edition](https://www.wiley.com/en-us/Linux+Command+Line+and+Shell+Scripting+Bible%2C+4th+Edition-p-9781119700937)
-    - Familiarity with Ubuntu's desktop environment
-    - Understand GNU/Linux file system
-    - Proficiency with basic terminal commands (bash)
-- [Python Data Science Handbook by Jake VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/)
-    - Python/C++ skills, including basic OOP concepts
-- [Pro Git by Scott Chacon and Ben Straub](https://git-scm.com/book/en/v2)
-    - Basics of VCS (Version control system) with git
+Knowledge required:
+- Familiarity with Ubuntu’s desktop environment. I recommend the book [Linux Command Line and Shell Scripting Bible 4th Edition](https://www.wiley.com/en-us/Linux+Command+Line+and+Shell+Scripting+Bible%2C+4th+Edition-p-9781119700937) chapter 1 section "The Linux Desktop Environment".
+- Proficiency with basic terminal commands (mainly bash). See chapter 3 and 4 of [Linux Command Line and Shell Scripting Bible 4th Edition](https://www.wiley.com/en-us/Linux+Command+Line+and+Shell+Scripting+Bible%2C+4th+Edition-p-9781119700937).
+- Understand GNU/Linux file system.  [Linux Command Line and Shell Scripting Bible](https://www.wiley.com/en-us/Linux+Command+Line+and+Shell+Scripting+Bible%2C+4th+Edition-p-9781119700937) chapter 7 and 8.
+- Python/C++ skills, including basic OOP concepts. For recap python check [Think Python 2nd Edition by Allen B. Downey](https://greenteapress.com/wp/think-python-2e/) for [C++ check Programming: Principles and Practice Using C++ 2nd Edition by Bjarne Stroustrup](https://jakevdp.github.io/PythonDataScienceHandbook/)
+- Basics of VCS (Version control system) with git. My personal recommendation is the [Pro Git 2nd Edition by Scott Chacon and Ben Straub](https://git-scm.com/book/en/v2) chapter 1, 2, and 3.
 
 Software requirements:
-- OS: Ubuntu 22.04 Desktop
-- Install: ROS Humble, check the official documentation and follow [Ubuntu Debian packages (recommended)](https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html)
+- OS: Ubuntu 22.04 Desktop. I personally recommend a native Ubuntu installation on your computers. Dual-boot also works but very impractical for daily use (in my opinion). If you want to use a virtual machine I recommend using VMWare Player it's free for personal non-commercial use (runs on GNU/Linux and Windows).
+- Install: ROS Humble, check the official documentation and follow [Ubuntu Debian packages (recommended)](https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html) to install it.
 
 ## Module 1 - Basics
 
