--- a/src/content/docs/en/complex-numbers.mdx
+++ b/src/content/docs/en/complex-numbers.mdx
@@ -8,9 +8,6 @@ Sadly, complex numbers seem to allude to being difficult to understand or compli
 
 These notes explore a little of the history and origin of complex numbers, and if possible better explore the inner beauty of this representation.
 
-People:
-- [Scipione del Ferro](https://en.wikipedia.org/wiki/Scipione_del_Ferro): Known for	Solving the depressed cubic equation.
-- [Gerolamo Cardano](https://en.wikipedia.org/wiki/Gerolamo_Cardano): "Complex numbers are [...] subtle as they are useless [...]" 
 
 
 ## The "Imaginary" numbers
@@ -52,4 +49,4 @@ The "complex" plane:
 
 - [(video) How Imaginary Numbers Were Invented](https://www.youtube.com/watch?v=cUzklzVXJwo) by Veritasium
 - [(video) Imaginary Numbers Are Not Imaginary | Jeff O'Connell | TEDxOhloneCollege](https://www.youtube.com/watch?v=7kAQrz_b244)
-
+- [A Short History of Complex Numbers](https://www.math.uri.edu/~merino/spring06/mth562/ShortHistoryComplexNumbers2006.pdf)
