--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -71,3 +71,19 @@
   libraryCatalog = {arXiv.org},
   date = {2022-09-24 2022-09-24},
 }
+@preprint{bochkovskiiDepthProSharp2024,
+  language = {en},
+  accessDate = {2024-11-11 15:51:14},
+  author = {Bochkovskii, Aleksei and Delaunoy, Amaël and Germain, Hugo and Santos, Marcel and Zhou, Yichao and Richter, Stephan R. and Koltun, Vladlen},
+  repository = {arXiv},
+  extra = {arXiv:2410.02073 [cs]},
+  abstractNote = {We present a foundation model for zero-shot metric monocular depth estimation. Our model, Depth Pro, synthesizes high-resolution depth maps with unparalleled sharpness and high-frequency details. The predictions are metric, with absolute scale, without relying on the availability of metadata such as camera intrinsics. And the model is fast, producing a 2.25-megapixel depth map in 0.3 seconds on a standard GPU. These characteristics are enabled by a number of technical contributions, including an efficient multi-scale vision transformer for dense prediction, a training protocol that combines real and synthetic datasets to achieve high metric accuracy alongside fine boundary tracing, dedicated evaluation metrics for boundary accuracy in estimated depth maps, and state-of-the-art focal length estimation from a single image. Extensive experiments analyze specific design choices and demonstrate that Depth Pro outperforms prior work along multiple dimensions. We release code and weights at https://github.com/apple/ml-depth-pro},
+  title = {Depth Pro: Sharp Monocular Metric Depth in Less Than a Second},
+  libraryCatalog = {arXiv.org},
+  url = {http://arxiv.org/abs/2410.02073},
+  shortTitle = {Depth Pro},
+  key = {JJ5C6VKZ},
+  date = {2024-10-02 2024-10-02},
+  year = {2024},
+  archiveID = {arXiv:2410.02073},
+}
